# spike-bench

./: CMakeLists.txt  README.md
src/: common.h
src/math/: array.h  conv.h  core.h  exp.h  food.h  gradients.h  kernels.h  rng.h  tensor.h
src/math/simd/: hw.h  include.h  sw.h
src/math/simd/utils/: avx512_mathfun.h  avx_mathfun.h  simd_utils_constants.h  sse_mathfun.h
src/math/simd/utils/inc/: avx_mathfun.h  types.h
src/math/simd/x86/: macros.h
src/rlimgui/: rlImGui.cpp  rlImGui.h
src/snn5/: base.cpp  base.h  builder.cpp  builder.h  conf.cpp  conf.h  handler.cpp  handler.h  layout.cpp  layout.h  log.cpp  log.h  misc.h  neurons.cpp  neurons.h  snn.cpp  snn.h  synapses.cpp  synapses.h  ui.cpp  ui.h  wrappers.cpp  wrappers.h
src/test/: bench.cpp  cuda_perf.cpp  etl.cpp  etl.h  graph_stride.cpp  math.cpp  simd.cpp  snn5_ui.cpp  tensor.cpp  test_ui2.cpp  valgrind.cpp  validate.cpp  vd2.cpp
src/util/: data.h  debug.cpp  debug.h  log.h  misc.h  mnist.cpp  mnist3.h  timer.h
